# docs/swagger.json
@@ -524,6 +524,52 @@
                 }
             }
         },
+        "/quest-service/quest/all/with-statuses": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "quest"
+                ],
+                "summary": "Получение всех опросов со статусами",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access token (с биркой)",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.QuestWithStatuses"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/quest-service/quest/by-user/{id}": {
             "get": {
                 "consumes": [
@@ -1523,7 +1569,7 @@
                 "fromRole": {
                     "type": "string"
                 },
-                "idIndicator": {
+                "id": {
                     "type": "integer"
                 },
                 "idСategory": {
@@ -1584,7 +1630,7 @@
                 "fromRole": {
                     "type": "string"
                 },
-                "idIndicator": {
+                "id": {
                     "type": "integer"
                 },
                 "idСategory": {
@@ -1710,6 +1756,38 @@
                 },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "models.QuestWithStatuses": {
+            "type": "object",
+            "properties": {
+                "available": {
+                    "type": "boolean"
+                },
+                "endAt": {
+                    "type": "string"
+                },
+                "idQuest": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "percent": {
+                    "type": "integer"
+                },
+                "startAt": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "teams": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.TeamWithStatus"
+                    }
                 }
             }
         },
@@ -1842,6 +1920,26 @@
                 }
             }
         },
+        "models.TeamWithStatus": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "progress": {
+                    "type": "integer"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.UserWithStatus"
+                    }
+                }
+            }
+        },
         "models.Template": {
             "type": "object",
             "properties": {
@@ -1921,6 +2019,23 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "models.UserWithStatus": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
                 }
             }
         }
