# models/quest_team.model.go
@@ -2,7 +2,15 @@ package models
 
 type QuestTeam struct {
 	IdQuestTeam int    `json:"idQuestTeam"`
+	IdQuest     int    `json:"idQuest"`
 	IdTeam      string `json:"idTeam"`
-	IdQuest     string `json:"idQuest"`
 	Name        string `json:"name"`
+}
+
+type QuestTeamWithPercent struct {
+	IdQuestTeam int    `json:"idQuestTeam"`
+	IdQuest     int    `json:"idQuest"`
+	IdTeam      string `json:"idTeam"`
+	Name        string `json:"name"`
+	Percent     int    `json:"percent"`
 }
