# routes/quest.route.go
@@ -8,11 +8,12 @@ import (
 func Quest(baseGroup *gin.RouterGroup) {
 	group := baseGroup.Group("/quest")
 	group.GET("/:id", controllers.Quest.Get)
-	group.GET("/by-user/:id", controllers.Quest.GetByUserId)
 	group.GET("/with-indicators/:id", controllers.Quest.GetWithIndicators)
 	group.GET("/with-users/:id", controllers.Quest.GetWithUsers)
 	group.GET("/with-users-and-indicators/:id", controllers.Quest.GetWithUsersAndIndicators)
+	group.GET("/by-user/with-indicators/:id", controllers.Quest.GetByUserIdWithIndicators)
 	group.GET("/all", controllers.Quest.GetAll)
+	group.GET("/all/with-statuses", controllers.Quest.GetAllWithStatuses)
 	group.POST("/create", controllers.Quest.Create)
 	group.PUT("/hide/:id", controllers.Quest.Hide)
 	group.DELETE("/delete/:id", controllers.Quest.Delete)
